--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,9 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.4'
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 
     // https://mvnrepository.com/artifact/com.google.guava/guava
-    compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    implementation group: 'com.google.guava', name: 'guava', version: '19.0'
 
 }
